# jack-vm

./: .gitignore  dune-project  input.asm  output.hack  readme.md  temp.vm
assembler/: .gitignore  README.md  dune-project  improvements.txt  input.asm  temp.txt
assembler/lib/: ast.ml  dune  lexer.mll  machine.ml  mnemonics.ml  mylist.ml  parser.mly  string_tools.ml  string_tools.mli  vector.ml  vector.mli
assembler/test/: dune  test.txt  test_assembler.ml
lib/: SP.ml  SP.mli  ast.ml  call.ml  call.mli  dune  encode.ml  helper.ml  helper.mli  lexer.mll  parser.mly  return.ml  return.mli  returnAddress.ml  returnAddress.mli  segment.ml  segment.mli  snippets.ml  vmast.ml
test/: basic_multiplication.vm  dune  fdup_mul.vm  iterative_fib_megamul.vm  iterative_fibonacci.vm  multiple_mul.vm  recursive_fibonacci.vm  test_jackvm.ml
